<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">Quiz</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="questions_amount">Questions amount: </string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">Start</string>
    <string name="ignore">ignore</string>
    <string name="ten">10</string>
    <string name="geography">Geography</string>
    <string name="five">5</string>
    <string name="slash">/</string>
    <string name="sample_question">What is the largest city and commercial capital of Sri Lanka?</string>
    <string name="sample_answer">Colombo</string>
    <string name="skip">SKIP</string>

    <string-array name="categories">
        <item>Geography</item>
        <item>Mythology</item>
        <item>Mathematics</item>
        <item>Mixed</item>
    </string-array>

    <string-array name="difficulty">
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
        <item>any</item>
    </string-array>
</resources>