<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="item"
            type="com.makhabatusen.quizapp.models.Question" />

        <variable
            name="listener"
            type="com.makhabatusen.quizapp.ui.questions_fragment.recycler.OnButtonClick" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="35dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical|center_horizontal"
            android:minLines="3"
            android:textSize="20sp"
            android:text="@{item.question}"
            tools:text="@string/sample_question"
            />

        <LinearLayout
            android:id="@+id/layout_four_options"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{item.shuffledAnswers.size() == 4 ? View.VISIBLE : View.GONE }">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_first_option"
                style="@style/ButtonOptionsStyle"
                android:onClick="@{(view) -> listener.onBtnAnswerClick(view, item, item.shuffledAnswers[0])}"
                android:text="@{item.shuffledAnswers[0]}"
                tools:text="@string/sample_answer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_second_option"
                style="@style/ButtonOptionsStyle"
                android:onClick="@{(view) -> listener.onBtnAnswerClick(view, item, item.shuffledAnswers[1])}"
                android:text="@{item.shuffledAnswers[1]}"
                tools:text="@string/sample_answer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_third_option"
                style="@style/ButtonOptionsStyle"
                android:onClick="@{(view) -> listener.onBtnAnswerClick(view, item, item.shuffledAnswers[2])}"
                android:text="@{item.shuffledAnswers[2]}"
                tools:text="@string/sample_answer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_forth_option"
                style="@style/ButtonOptionsStyle"
                android:onClick="@{(view) -> listener.onBtnAnswerClick(view, item, item.shuffledAnswers[3])}"
                android:text="@{item.shuffledAnswers[3]}"
                tools:text="@string/sample_answer" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_two_options"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{ item.shuffledAnswers.size() == 2 ? View.VISIBLE : View.GONE }">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_first_option2"
                style="@style/ButtonOptionsStyle"
                android:onClick="@{(view) -> listener.onBtnAnswerClick(view, item, item.shuffledAnswers[0])}"
                android:text="@{item.shuffledAnswers[0]}"
                tools:text="@string/sample_answer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_second_option2"
                style="@style/ButtonOptionsStyle"
                android:onClick="@{(view) -> listener.onBtnAnswerClick(view, item, item.shuffledAnswers[1])}"
                android:text="@{item.shuffledAnswers[1]}"
                tools:text="@string/sample_answer" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skip"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/pink"
            android:onClick="@{(view) -> listener.onBtnSkipClick(view, item)}"
            android:text="@string/skip"
            android:textStyle="bold"
            app:cornerRadius="20dp" />

    </LinearLayout>
</layout>
